--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,10 +181,22 @@ Add clicksend.com mobile text messaging support
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Add input validation to the new sections: Currency Support, Power User
+Make sure our new admin input validation on domains works on Windows Desktop Edition.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Add setting upper / lower case auto-correction for the portfolio assets array keys in config-auto-adjust.php.
+
+
+Add the ability to allow a BLANK single array item admin user input for domains arrays IN THE INTERFACE (strict servers, etc), in the corrisponding admin user input validation files in: /app-lib/php/classes/includes/admin/. Use the same logic we already do this for in other admin input arrays. TEST ALL THESE OUT BY DELETING ALL ITEMS VIA INTERFACE, INCLUDING ALL THE OTHER ONES WE ALREADY SETUP.
+
+
+For access stats, add showing multiple visit timestamps by adding an info balloon when hovering over the 'last visit ' timestamp. Convert the user agent info to show using info balloons as well (instead of in a title tag), BUT make sure it still renders safe by escaping HTML characters. Also, convert the access stats data retrieval to AJAX, using roughly the same logic we use for news feeds. Then we have 'shock absorbers ' for when it's loaded in the user area admin quick links.
+
+
+Add a drop-down or radio buttons above the "access stats" data, with another option to "view all IP addresses combined" (in one data table instead of their own). Still keep the per-ip option we have now, but add this as an additional option too.
 
 
 Change semantic naming of 'coin_amnts' form id ON USER AREA 'UPDATE PORTFOLIO' PAGE (AND WHEREVER IT'S CALLED BY THAT ID IN THE APP), as it now also handles charts / news feeds / etc.
@@ -193,13 +205,13 @@ Change semantic naming of 'coin_amnts' form id ON USER AREA 'UPDATE PORTFOLIO' P
 'access stats' only allows 'zebra' striped data rows to be enabled in the ADMIN AREA iframe version, so our custom CSS logic is screwed up when rendered in the USER AREA 'system monitoring' links version, to the point we have to disable the onload / initial table sorting for that area (so it's only enabled when 'is_iframe' is set, in functions.js). Find out why, and fix it.
 
 
-Merge System stats / access stats / app logs into one area called: "App Monitoring => Telemetry | Access | Logs". Add horizontal tabs a top of this area, for each subsection. Store stats for each ip address in /cache/events/access_stats/, USING THE SAME FILENAME COMPATIBILITY LOGIC WE USE TO SAFELY CREATE IPV6-BASED-FREINDLY FILENAMES IN /cache/events/throttling/.
-
-
-Ad a GENERAL / GENERIC POS rewards calculator to the tools page.
+Get a border around the outside of the access stats tables, and any other table CSS tidying up noticed.
 
 
 Move all admin-related functions into the new 'ct_admin' PHP class.
+
+
+Ad a GENERAL / GENERIC POS rewards calculator to the tools page.
 
 
 Security page should show the app version number, AND any version upgrade alerts (if available).
