--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,6 +181,12 @@ Add clicksend.com mobile text messaging support
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+p̶̬͑ḧ̴͓i̶͖͆s̴̼͒h̸͇̾i̸̝̒n̷̟͂g̴̖͌ ̶̨͑m̵̝̚é̴͎ ̶̦̋w̸̫̍i̴̜͗l̷͇̊ḽ̷͌ ̷̛͙N̸̦̒Ȯ̴͜Ť̸̜ ̵̣͠w̶͙̾o̶̫̎ŕ̷͇k̵̹̆ ̵̑ͅf̷̈́ͅő̶̯ȓ̷͓ ̸͚̐y̵͈͆ö̷͎ũ̸̘
+
+
+Run full market unit tests, since we heavily refactored the exchange APIs logic
+
+
 'Show per page' on access stats page has a 'current' class added dynamically, so we can style it like we did for the page number.
 
 
