--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -199,15 +199,6 @@ Separate the "add asset market" and "delete asset market" subsections in the "po
 Add a 'manual' mode for the 'add new asset market' feature, on the portfolio assets admin config interface, whereby you get a drop down menu of ALL the exchanges, and you select ONLY ONE, and then you add a market id MANUALLY BY HAND in a text field. The app then does an input validation check to make sure the market exists, and shows a rejection (if market doesn't exist) OR 'click to confirm' confirmation page / modal to add the new asset market. Then we have support for 'limited APIs' within the feature. We can eventually map any 'available assets' API endpoints for 'limited APIs' into the 'add new asset' feature in the future, so we can eventually add auto-scanning for 'limited APIs' exchange's markets.
 
 
-Add a drop-down menu on the access stats page, to switch between listing visits as 'per ip address' (which we have already) OR 'per visit time' (combining all visits into one list, based of visit timestamp).
-
-
-For access stats, add showing multiple visit timestamps by adding an info balloon when hovering over the 'last visit ' timestamp. Convert the user agent info to show using info balloons as well (instead of in a title tag), BUT make sure it still renders safe by escaping HTML characters. Also, convert the access stats data retrieval to AJAX, using roughly the same logic we use for news feeds. Then we have 'shock absorbers ' for when it's loaded in the user area admin quick links.
-
-
-'access stats' only allows 'zebra' striped data rows to be enabled in the ADMIN AREA iframe version, so our custom CSS logic is screwed up when rendered in the USER AREA 'system monitoring' links version, to the point we have to disable the onload / initial table sorting for that area (so it's only enabled when 'is_iframe' is set, in functions.js). Find out why, and fix it.
-
-
 For stock asset info IN THE APP (like we do for coingecko / coinmarketcap), use data from this endpoint:
 https://www.alphavantage.co/query?function=OVERVIEW&symbol=TICKER_HERE&apikey=API_KEY_HERE
 
@@ -215,6 +206,12 @@ There are also endpoints available for income statement / balance sheet / cash f
 https://www.alphavantage.co/documentation/#fundamentals
 
 Try fitting all them into the info bubble toolip area for each stock asset, and see how it looks. ALSO HAVE THIS ONLY UPDATE EVERY 24 HOURS, AND DELETE ONE DAILY LIVE *ASSET PRICE* DATA REQUEST LIMIT IN THE API THROTTLING LOGIC, TO ALLOW THIS *ASSET INFO* DATA REQUEST TO HAPPEN WITHOUT GOING OVER DAILY LIMITS FOR THE *FREE* LEVEL.
+
+
+Add a drop-down menu on the access stats page, to switch between listing visits as 'per ip address' (which we have already) OR 'per visit time' (combining all visits into one list, based of visit timestamp).
+
+
+For access stats, add showing multiple visit timestamps by adding an info balloon when hovering over the 'last visit ' timestamp.
 
 
 HUGE 'TONS OF COOKIE DATA' ISSUE ON SERVERS ALREADY RUNNING #OTHER# WEB APPS (LIKE WORDPRESS) #AT THE SAME TIME / ON SAME DOMAIN# (AS IT CAN GO OVER THE SERVER HEADER LIMIT AND CRASH THE WEB APP LOADING BOTH APP'S COOKIES INTO THE HEADER): Since we already wait for the page to load for initiating batch-grabbing news feeds(?), maybe we can store the user-selected feeds in local storage, since the data set is potentially VERY large (to save alot on cookie header data)? Look over the batch loading logic, and see if we can do it more with JavaScript instead of PHP (except for the ajax calls to the server AFTER we know what was user-chosen). Same should generally go for price charts (as we ALSO load after the page has loaded), so look into that too.
