--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6781,6 +6781,12 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Refactoring / optimization of ENTIRE markets API data parsing logic (prep for UPCOMING 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)
 
+-Optimizations / polish on the Access Stats UX and logic
+
+-Upgraded Idex exchange API to v4
+
+-Cleaned up stale DEMO markets / news feeds
+
 IMPORTANT *UPGRADE* NOTICES:
 
 v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
