--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6781,11 +6781,11 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Refactoring / optimization of ENTIRE markets API data parsing logic (prep for UPCOMING 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)
 
+-Cleaned up stale DEMO markets / news feeds / text gateways
+
 -Optimizations / polish on the Access Stats UX and logic
 
 -Upgraded Idex exchange API to v4
-
--Cleaned up stale DEMO markets / news feeds
 
 IMPORTANT *UPGRADE* NOTICES:
 
