--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -190,6 +190,9 @@ NOTES FOR BLACKHATS: P̵̗̽ḫ̵͘i̸̹̓s̵͚̈́h̵̻̕i̸͈͒ṉ̵͘g̸͖̀ ̵
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
+
+
 In $ct['api']->ticker_markets_search(), there is a pairings list for coingecko only, for searching coingecko for app ids to add a new asset market. Add this list as a new setting in the 'currency support' admin config section, and include input validation for it.
 
 
@@ -197,9 +200,6 @@ Make sure the market does NOT already exist when adding new ones, and DISALLOW R
 
 
 Separate the "add asset market" and "delete asset market" subsections in the "portfolio assets" main admin section, by splitting the page into TABBED divs. Each subsection's div should have its own "data" child div, with an id attribute that is populated via AJAX. Then we don't need to have endless iframes within iframes, and it keeps the developer AND user experience both good without any noticeable compromise.
-
-
-Add a 'manual' mode for the 'add new asset market' feature, on the portfolio assets admin config interface, whereby you get a drop down menu of ALL the exchanges, and you select ONLY ONE, and then you add a market id MANUALLY BY HAND in a text field. The app then does an input validation check to make sure the market exists, and shows a rejection (if market doesn't exist) OR 'click to confirm' confirmation page / modal to add the new asset market. Then we have support for 'limited APIs' within the feature. We can eventually map any 'available assets' API endpoints for 'limited APIs' into the 'add new asset' feature in the future, so we can eventually add auto-scanning for 'limited APIs' exchange's markets.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
